# cob_environment_perception

cob_3d_mapping_rviz_plugins/: CMakeLists.txt  CMakeLists.txt~  plugin_description.xml  plugin_description.xml~
cob_3d_mapping_rviz_plugins/include/cob_3d_mapping_rviz_plugins/: get_rviz_camera_position.h  shape_display.h~
cob_3d_mapping_rviz_plugins/src/: get_rviz_camera_position.cpp  shape_display.cpp~
cob_3d_mapping_semantics/: manifest.xml~
cob_3d_visualization/include/cob_3d_visualization/: shape_visualization.h
cob_3d_visualization/launch/: shape_visualization.launch
cob_3d_visualization/src/: shape_marker.cpp  shape_visualization.cpp
rviz_view_controller/: CMakeLists.txt  mainpage.dox  manifest.xml~
rviz_view_controller/msg/: CameraPlacementTrajectory.msg
rviz_view_controller/src/: free_view_controller.cpp
rviz_view_controller/src/rviz_view_controller/msg/: _CameraPlacement.py  _CameraPlacementTrajectory.py  __init__.py
